popup overlapping issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -1538,6 +1538,7 @@ sans-serif;
 }
 
 .MuiDrawer-root.MuiDrawer-modal {
+  z-index: 1000 !important;
   .MuiBackdrop-root {
     max-height: 100vh;
   }
